[package]
name = "pool-monitor-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.1.4"
solana-sdk = "2.1.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
